added some of the remaining styles

--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,7 @@ html {
 body {
       font-family: 'Open Sans', sans-serif;
       font-size: 1em;
+      color: #e2e3ed;
       text-align: left;
    }
 
@@ -122,6 +123,7 @@ a {
  h2 {
     font-family: 'Poppins', sans-serif;
     font-size: 1.875em;
+    font-weight: 500;
  }
 
  h3,
@@ -129,19 +131,12 @@ a {
    font-family: 'Poppins', sans-serif;
    margin: 20px 0;
    font-size: 1.125em;
+   font-weight: 500;
  }
 
  p {
    font-size: .875em;
    line-height: 1.285;
- }
-
- img {
-
- }
-
- figure {
-
  }
 
  address {
@@ -160,6 +155,7 @@ a {
       justify-content: center;
       align-items: center;
       flex-flow: row wrap;
+      background-color: #202322;
   }
 
   header {
@@ -170,20 +166,30 @@ a {
     width: 100%;
     height: 1px;
     margin: 10px 0 20px 0;
+    background: #3a3a3a;
   }
 
   header nav {
+    width: 60%;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-flow: row wrap;
-    width: 60%;
+    font-size: 1.125em;
+    font-weight: 700;
+    text-transform: uppercase;
+
   }
 
 header nav ul {
+  width: 100%;
   display: flex;
   justify-content: space-around;
-  width: 100%;
+
+}
+
+header nav ul li {
+  font-size: 1.125em;
 }
 
 footer {
@@ -205,7 +211,7 @@ footer .contact {
 
 footer .social-icons {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -217,6 +223,7 @@ footer .social-icons p {
 
 footer .copyright {
   margin: 20px 0;
+  text-align: center;
 }
 
 /* -------------------- Mobile Styles - Homepage -------------------- */
@@ -236,6 +243,32 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
+}
+
+aside .form{
+  margin-top: 30px;
+}
+
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+}
+
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 /* Features */
@@ -272,10 +305,12 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background-color: #2a423a;
 }
 
 .reviews h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .reviews h3 {
@@ -292,6 +327,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
 }
 
 .contact-section {
@@ -299,6 +335,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #2a423a;
 }
 
 .contact-content p {
@@ -314,6 +351,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
 }
 
 .faq .content-wrapper {
@@ -326,15 +364,17 @@ aside {
 
 .faq h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .faq-content {
   margin-bottom: 50px;
 }
 
-
-
-
+.faq-content h4 {
+  line-height: 1.333;
+  font-weight: 700;
+}
 
 
 
@@ -434,6 +474,16 @@ aside {
            margin: 100px 0;
        }
 
+       h2 {
+         font-size: 2.25em;
+         line-height: 1.333;
+     }
+
+     h3 {
+         font-size: 1.5em;
+         line-height: 1.25;
+     }
+
        /* Header */
 
        header {
@@ -443,6 +493,10 @@ aside {
        header .content-wrapper {
            width:100%;
            justify-content: space-between;
+       }
+
+       header figure {
+         width: 30%;
        }
 
        header nav {
@@ -458,6 +512,12 @@ aside {
        }
 
        /* Hero Area */
+
+       .hero-area h1 {
+         font-size: 3em;
+         line-height: 1;
+         margin: 0;
+       }
 
        /* Aside */
        aside .content-wrapper {
@@ -493,8 +553,17 @@ aside {
          justify-content: space-between;
        }
 
+       .reviews h2 {
+         width: 90%;
+       }
+
        .reviews article div {
            width:49%;
+       }
+
+       .reviews h3 {
+         width: 75%;
+         margin: 0;
        }
 
        /* Footer */
@@ -503,14 +572,24 @@ aside {
            margin: 100px 0;
        }
 
-       .footer-content {
+       footer .footer-content {
          display: flex;
          justify-content: space-between;
          align-items: center;
+         flex-direction: row;
        }
 
        footer .contact {
            margin-bottom: 0;
+       }
+
+       footer h4 {
+         font-size: 1.5em;
+         margin-bottom: 40px;
+       }
+
+       footer p {
+           line-height: 1.285;
        }
 
        footer .copyright {
@@ -541,6 +620,10 @@ aside {
          align-items: flex-start;
        }
 
+       .contact-content h4 {
+         font-size: 1.5em;
+       }
+
        /* ==========================================================================
         FAQ Page
         ========================================================================== */
@@ -557,6 +640,12 @@ aside {
          width: 100%;
        }
 
+       .faq h4,
+       .faq p {
+           font-size: .875em;
+           line-height: 1.125;
+       }
+
    }
 
    }
@@ -566,13 +655,27 @@ aside {
 
    .content-wrapper {
             max-width: 960px;
-            margin: 100px 0;
        }
 
-        /* Hero */
-       .hero-area h1 {
-           width: 60%;
+       h2 {
+         font-size: 2.25em;
        }
+
+       h3,
+       h4 {
+           font-size: 1.875em;
+       }
+
+       p {
+           font-size: 1.125em;
+           line-height: 1.333;
+       }
+
+       /* Hero */
+       .hero-area h1 {
+         font-size: 3.75em;
+         width: 60%;
+     }
 
        /* Aside */
        aside .content-wrapper {
@@ -604,25 +707,35 @@ aside {
        .mission h2,
        .contact-section .content-wrapper h2 {
            width: 100%;
+           font-size: 3em;
        }
 
        .contact-section .content-wrapper h2 {
            margin-bottom: 40px;
        }
 
+       .contact-content h4 {
+         font-size: 1.875em;
+       }
+
 
    /* ==========================================================================
       FAQ Page
       ========================================================================== */
-       .faq h2 {
-           width: 100%;
-       }
+      .faq h2 {
+        width: 100%;
+        font-size: 3em;
+      }
 
-       .faq-content {
-           flex-basis: 35%;
-       }
+      .faq-content {
+        flex-basis: 35%;
+      }
 
-   }
+      .faq h4,
+      .faq p {
+          font-size: 1.125em;
+          line-height: 1;
+      }
 
    }
 
