--- a/css/main.css
+++ b/css/main.css
@@ -148,6 +148,14 @@ a {
    margin: 50px 0;
  }
 
+ img {
+	width: 100%;
+}
+
+figure {
+        margin: 0;
+}
+
    /* -------------------- Base Header - Footer Styles -------------------- */
   header,
   footer {
@@ -192,6 +200,8 @@ header nav ul li {
   font-size: 1.125em;
 }
 
+
+
 footer {
   flex-direction: column;
 }
@@ -234,6 +244,14 @@ footer .copyright {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background: url(../img/hero-image.jpg);
+  background-size: cover;
+  background-position: center;
+  min-height: 500px;
+}
+
+.hero-area h1 {
+  font-size: 2.25em;
 }
 
 /* Aside */
@@ -277,6 +295,9 @@ input[type=button] {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background: url('../img/features-image.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
 .features h2 {
@@ -297,6 +318,7 @@ input[type=button] {
 
 .features p {
   margin: 0;
+  text-align: center;
 }
 
 /* Reviews */
@@ -487,11 +509,13 @@ input[type=button] {
        /* Header */
 
        header {
+         display: flex;
          justify-content: space-around;
        }
 
        header .content-wrapper {
            width:100%;
+           display: flex;
            justify-content: space-between;
        }
 
@@ -504,6 +528,7 @@ input[type=button] {
        }
 
        header nav ul {
+          display: flex;
           justify-content: space-between;
        }
 
@@ -535,6 +560,10 @@ input[type=button] {
 
        /* Features */
 
+       .features h2 {
+         margin: 0 20px 20px 0;
+       }
+
        .features article {
          display: flex;
          justify-content: center;
@@ -557,8 +586,9 @@ input[type=button] {
          width: 90%;
        }
 
+       .reviews article figure,
        .reviews article div {
-           width:49%;
+         width: 49%;
        }
 
        .reviews h3 {
@@ -629,10 +659,12 @@ input[type=button] {
         ========================================================================== */
 
        .faq .content-wrapper {
+         display: flex;
          justify-content: space-between;
        }
 
        .faq-content {
+         display: flex;
          flex-basis: 40%;
        }
 
@@ -679,6 +711,7 @@ input[type=button] {
 
        /* Aside */
        aside .content-wrapper {
+          display: flex;
            justify-content: space-around;
        }
 
@@ -693,6 +726,7 @@ input[type=button] {
        }
 
        .features article {
+           display: flex;
            flex-basis: 33%;
        }
 
@@ -728,6 +762,7 @@ input[type=button] {
       }
 
       .faq-content {
+        display: flex;
         flex-basis: 35%;
       }
 
