--- a/css/main.css
+++ b/css/main.css
@@ -656,6 +656,10 @@ input[type=button] {
          width: 40%;
        }
 
+       .map figure {
+         padding-bottom: 45.5%;
+       }
+
        .contact-section .content-wrapper h2 {
          width: 80%;
        }
@@ -754,6 +758,10 @@ input[type=button] {
    /* ==========================================================================
       About Page
       ========================================================================== */
+      .map figure {
+        padding-bottom: 56.25%;
+      }
+
        .mission h2,
        .contact-section .content-wrapper h2 {
            width: 100%;
