--- a/css/main.css
+++ b/css/main.css
@@ -206,8 +206,13 @@ footer {
   flex-direction: column;
 }
 
+footer h4 {
+  text-align: center;
+}
+
 footer p {
   margin: 0;
+  text-align: center;
 }
 
 footer .content-wrapper {
@@ -226,9 +231,17 @@ footer .social-icons {
 }
 
 footer .social-icons p {
+  background-color: #527158;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+footer .social-icons p i {
+  font-size: 1.3125em;
 }
 
 footer .copyright {
@@ -643,6 +656,11 @@ input[type=button] {
 
        footer p {
            line-height: 1.285;
+       }
+
+       footer .social-icons {
+         width: 12.5em;
+         justify-content: space-between;
        }
 
        footer .copyright {
