--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,8 @@ body {
 ul,
 ol {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 a {
@@ -122,7 +124,8 @@ a {
 
  h2 {
     font-family: 'Poppins', sans-serif;
-    font-size: 1.875em;
+    margin: 0;
+    font-size: 1.75em;
     font-weight: 500;
  }
 
@@ -153,7 +156,7 @@ a {
 }
 
 figure {
-        margin: 0;
+  margin: 0;
 }
 
    /* -------------------- Base Header - Footer Styles -------------------- */
@@ -168,6 +171,22 @@ figure {
 
   header {
     padding: 15px 0;
+  }
+
+  header .content-wrapper {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+
+  header figure {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
   }
 
   .header-divider {
@@ -199,7 +218,6 @@ header nav ul {
 header nav ul li {
   font-size: 1.125em;
 }
-
 
 
 footer {
@@ -264,7 +282,8 @@ footer .copyright {
 }
 
 .hero-area h1 {
-  font-size: 2.25em;
+  font-size: 2em;
+  margin: 0;
 }
 
 /* Aside */
@@ -275,6 +294,12 @@ aside {
   align-items: center;
   flex-flow: row wrap;
   background-color: #527158;
+}
+
+aside h3 {
+  font-weight: bolder;
+  margin: 0;
+  margin-bottom: 10px;
 }
 
 aside .form{
@@ -316,12 +341,15 @@ input[type=button] {
 .features i {
 	font-size: 3.75em;
   margin-bottom: 40px;
-  text-align: center;
+  display:flex;
+  justify-content: center;
   color: #e2e3ed;
 }
 
 .features h2 {
-  margin-bottom: 60px;
+  margin-bottom: 30px;
+  padding: 40px 20px;
+
 }
 
 .features article {
@@ -351,13 +379,18 @@ input[type=button] {
 }
 
 .reviews h2 {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   line-height: 1;
+  padding: 20px;
 }
 
 .reviews h3 {
   width: 55%;
-  margin: 20px 0;
+  margin: 20px 10px;
+}
+
+.reviews p {
+  margin: 20px 10px;
 }
 
 /* ==========================================================================
@@ -433,8 +466,6 @@ input[type=button] {
   line-height: 1.333;
   font-weight: 700;
 }
-
-
 
  /* ==========================================================================
    Helper classes
@@ -545,14 +576,12 @@ input[type=button] {
        /* Header */
 
        header {
-         display: flex;
          justify-content: space-around;
        }
 
        header .content-wrapper {
-           width:100%;
-           display: flex;
-           justify-content: space-between;
+         width: 100%;
+         justify-content: space-between;
        }
 
        header figure {
@@ -560,22 +589,21 @@ input[type=button] {
        }
 
        header nav {
-           width: 20%;
+         width: 20%;
        }
 
        header nav ul {
-          display: flex;
-          justify-content: space-between;
+         justify-content: space-between;
        }
 
        .header-divider {
-           display: none;
+         display: none;
        }
 
        /* Hero Area */
 
        .hero-area h1 {
-         font-size: 3em;
+         font-size: 2.7em;
          line-height: 1;
          margin: 0;
        }
@@ -597,7 +625,7 @@ input[type=button] {
        /* Features */
 
        .features h2 {
-         margin: 0 20px 20px 0;
+         margin: 0 40px 0 40px;
        }
 
        .features article {
@@ -620,15 +648,20 @@ input[type=button] {
 
        .reviews h2 {
          width: 90%;
+         margin-bottom: 40px;
        }
 
        .reviews article figure,
        .reviews article div {
-         width: 49%;
+         width: 90%;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         flex-flow: row wrap;
        }
 
        .reviews h3 {
-         width: 75%;
+         width: 95%;
          margin: 0;
        }
 
@@ -679,6 +712,7 @@ input[type=button] {
 
        .mission-content p {
          width: 40%;
+         padding-top: 20px;
        }
 
        .map figure {
@@ -687,6 +721,7 @@ input[type=button] {
 
        .contact-section .content-wrapper h2 {
          width: 80%;
+         padding-bottom: 20px;
        }
 
        .contact-content {
@@ -703,29 +738,24 @@ input[type=button] {
         FAQ Page
         ========================================================================== */
 
-       .faq .content-wrapper {
-         display: flex;
-         justify-content: space-between;
-       }
+        .faq .content-wrapper {
+          justify-content: space-between;
+        }
 
-       .faq-content {
-         display: flex;
-         flex-basis: 40%;
-       }
+        .faq-content {
+          flex-basis: 40%;
+        }
 
-       .faq h2 {
-         width: 100%;
-       }
+        .faq h2 {
+          width: 100%;
+        }
 
-       .faq h4,
-       .faq p {
-           font-size: .875em;
-           line-height: 1.125;
-       }
-
-   }
-
-   }
+        .faq h4,
+        .faq p {
+            font-size: .875em;
+            line-height: 1.125;
+        }
+      }
 
 @media only screen and (min-width: 1200px) {
    /*Desktop styles here*/
@@ -784,7 +814,7 @@ input[type=button] {
       About Page
       ========================================================================== */
       .map figure {
-        padding-bottom: 56.25%;
+        padding-bottom: 37.5%;
       }
 
        .mission h2,
@@ -811,7 +841,6 @@ input[type=button] {
       }
 
       .faq-content {
-        display: flex;
         flex-basis: 35%;
       }
 
@@ -820,8 +849,7 @@ input[type=button] {
           font-size: 1.125em;
           line-height: 1;
       }
-
-   }
+    }
 
 /* ==========================================================================
    Print styles.
